package com.gft.wrk25_communication.communication.domain.event;

import com.gft.wrk25_communication.communication.domain.notification.Notification;

public record NotificationCreatedEvent(Notification notification) {}
